<resources>
    <string name="app_name">SiliconStackKotlin</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="edit_task">Edit Task</string>
    <string name="are_you_sure_you_want_to_delete_this_task">Are you sure you want to delete this task ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>