<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB000000"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="7dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:padding="7dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_toLeftOf="@id/imageViewSave"
                    android:layout_toRightOf="@id/imageViewBack"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/add_task"
                    android:textColor="@color/colorWhite"
                    android:textSize="22dp" />

                <ImageView
                    android:id="@+id/imageViewSave"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:padding="7dp"
                    android:src="@drawable/ic_save" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/imageViewBack"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/corner_bg"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginRight="15dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/imageViewBack"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/body"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTextBody"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/corner_bg"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="250"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/imageViewBack"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/note"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTextNote"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="5dp"
                android:background="@drawable/corner_bg"
                android:layout_marginRight="15dp"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="500"
                android:maxLines="3"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/imageViewBack"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/status"
                android:textColor="@color/colorSecondaryText"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editTextStatus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="5dp"
                android:background="@drawable/corner_bg"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="25dp"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>